tests/NormalTests/paczka1/fuzzy1/48901338.err
Error in line 3: oaoSc15WlK2 S725 7,0
Error in line 15: oaoSc15WlK2 S520 23,2
Error in line 13: p2W3C A311 36,8
Error in line 19: p2W3C S725 7,3
Error in line 22: wHXYdABkdHJ S725 78,4
